Fixes the empty state UI of the attachment and adds labels to the rows/columns fields in the table menu. (#1172)
* Fixes the video max size not restricted issue when overflows.

* Added rows and columns label to the table creation menu.

* Set a min-height to the the video/image element so that the options button will not overflow.

* Added padding to the input fields of the table menu and moved styles to the existing table property.

--- a/src/styles/editor/menu.scss
+++ b/src/styles/editor/menu.scss
@@ -293,15 +293,25 @@
       line-height: 20px;
       width: 60px;
       height: 24px;
+      padding: 3px 5px;
 
       &::placeholder {
         color: rgba(var(--neeto-ui-white, 0.4));
       }
     }
 
+    &__menu-item {
+      display: flex;
+      flex-direction: column;
+      gap: 4px
+    }
+    &__input-label {
+      color: white;
+    }
+
     &__buttons {
       display: flex;
-      align-items: center;
+      align-self: flex-end;
       justify-content: space-between;
       gap: 4px;
     }
@@ -350,6 +360,13 @@
 
 .neeto-editor-bubble-menu-animate-shake {
   animation: 1s linear infinite alternate both shake;
+}
+
+.neeto-editor-table-menu {
+  &__button {
+    display: flex;
+    align-items: flex-end;
+  }
 }
 
 .neeto-editor__image-menu {
